--- a/sass/partials/_woocommerce-form-fields.scss
+++ b/sass/partials/_woocommerce-form-fields.scss
@@ -91,6 +91,7 @@ div.woocommerce form .form-row .woocommerce-input-wrapper span.description:befor
 div.woocommerce form .form-row label,
 div.woocommerce form #billing_address_2_field > label,
 div.woocommerce form #shipping_address_2_field > label {
+	z-index: z( 'default' ) + 1;
 	margin-bottom: $global-spacing-tiny;
 	width: auto;
 	opacity: unset;
